{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "9571a927-74b5-42d2-81a0-0eef57ad9a2d",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "9f001202-420e-4fef-905f-11bd7e8bffc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "b66dbe5e-b41b-477e-8010-91f72ac4e52e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "521c0e9b-8071-4980-8cca-a4bef60eb1a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ed6b7d1-d4a2-43b8-b6f1-816d1222d91d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9affce21-3806-42fe-80ec-c6afa24f329a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "508be8d6-e1f6-411f-8b5e-7b9c8767e62b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}